--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/ngx-toastr/toastr.css",
+            
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"]
           },
           "configurations": {
             "production": {
